src/objects/Wait_List_Income_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Income_Limit__c</fullName>
        <label>Percent Income Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Wait List Income Limit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Percent_Income_Limit__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HMY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wait List Income Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>